--- a/leaves.html
+++ b/leaves.html
@@ -183,8 +183,102 @@
             </div>
         </div>
 
-        <div class="row mt-4 mt-lg-5 leave-form d-flex justify-content-center">
-            <h4>Apply for Leave</h4>
+        <div class="row mt-4 mt-lg-5">
+            <div class="col-12 col-lg-4 in-main-heads in-main-head-left d-flex align-items-center ">
+                <div class="in-main-head">
+                    <span>All Invoices</span>
+                </div>
+            </div>
+            <div class="col-12 col-lg-8 in-main-heads in-main-head-right d-none d-lg-block">
+                <div class="in-main-head">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="d-flex justify-content-center align-items-center ">
+                            <span class="payroll-back-btn d-lg-none">
+                                <a href="payroll.html"><iconify-icon icon="weui:back-filled"></iconify-icon></a>
+                            </span>
+                            <span>INV-000181</span>
+                        </div>
+                        <span>
+                            <button>🖨️</button>
+                            <button>Approve</button>
+                            <button>More</button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-lg-4 in-main-cont in-main-cont-left">
+                <div class="px-3">
+                    <div class="payroll-search px-3 d-flex align-items-center">
+                        <input type="text" placeholder="Search">
+                        <span><iconify-icon icon="icon-park-outline:search"></iconify-icon></span>
+                    </div>
+                </div>
+                <div class="each-in-member">
+                    <div class="name-inv">
+                        <div class="in-name-amt">
+                            <span class="in-name">William Shakespeare</span>
+                            <span class="in-amount">$84.00</span>
+                        </div>
+                        <div class="in-num-date">
+                            <div>
+                                <span class="in-num">INV000181</span>
+                                <span class="in-date">08/05/2024</span>
+                            </div>
+                            <div class="in-sent">Sent</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="each-in-member">
+                    <div class="name-inv">
+                        <div class="in-name-amt">
+                            <span class="in-name">William Shakespeare</span>
+                            <span class="in-amount">$84.00</span>
+                        </div>
+                        <div class="in-num-date">
+                            <div>
+                                <span class="in-num">INV000181</span>
+                                <span class="in-date">08/05/2024</span>
+                            </div>
+                            <div class="in-sent">Sent</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="each-in-member">
+                    <div class="name-inv">
+                        <div class="in-name-amt">
+                            <span class="in-name">William Shakespeare</span>
+                            <span class="in-amount">$84.00</span>
+                        </div>
+                        <div class="in-num-date">
+                            <div>
+                                <span class="in-num">INV000181</span>
+                                <span class="in-date">08/05/2024</span>
+                            </div>
+                            <div class="in-sent">Sent</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="each-in-member">
+                    <div class="name-inv">
+                        <div class="in-name-amt">
+                            <span class="in-name">William Shakespeare</span>
+                            <span class="in-amount">$84.00</span>
+                        </div>
+                        <div class="in-num-date">
+                            <div>
+                                <span class="in-num">INV000181</span>
+                                <span class="in-date">08/05/2024</span>
+                            </div>
+                            <div class="in-sent">Sent</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-8 in-main-cont in-main-cont-rigth px-4 d-none d-lg-block">
+                <div class="col-12 leave-form mt-3">
+                    <h4>Apply for Leave</h4>
             <form action="" class="row  px-lg-5 mt-3">
                 <div class="col-6 leave-type">
                     <h6>Leave Type</h6>
@@ -227,61 +321,36 @@
                     <button class="btn">Cancel</button>
                 </div>
             </form>
-        </div>
-
-        <div class="row mt-4 mt-lg-5">
-            <h4>Leave History </h4>
-            <div class="leave-history mt-3 px-3 px-md-5" style="overflow-x:auto;">
-                <table>
-                    <tr>
-                        <th>S.No</th>
-                        <th>Leave Type</th>
-                        <th>From</th>
-                        <th>To</th>
-                        <th>Day Time</th>
-                        <th>Status</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Annual Leave</td>
-                        <td>19 Feb 2020</td>
-                        <td>19 Feb 2020</td>
-                        <td>Full</td>
-                        <td>Pending</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Sick Leave</td>
-                        <td>19 Mar 2020</td>
-                        <td>19 Mar 2020</td>
-                        <td>Full</td>
-                        <td>Approved</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Annual Leave</td>
-                        <td>19 Apr 2020</td>
-                        <td>19 Apr 2020</td>
-                        <td>Full</td>
-                        <td>Approved</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>Sick Leave</td>
-                        <td>19 May 2020</td>
-                        <td>19 May 2020</td>
-                        <td>Full</td>
-                        <td>Approved</td>
-                    </tr>
-                </table>
+                </div>
             </div>
         </div>
 
-        <div class="empty"></div>
+        
 
+        <button class="payroll-plus-btn">+</button>
+        <div class="empty"></div>
     </section>
 
     <!-- Scripts -->
+
+    <script>
+        document.querySelectorAll('.each-in-member').forEach(function (element) {
+            element.addEventListener('click', function () {
+                var leftDivHead = document.querySelector('.in-main-head-left');
+                var rightDivHead = document.querySelector('.in-main-head-right');
+                var leftDivCont = document.querySelector('.in-main-cont-left');
+                var rightDivCont = document.querySelector('.in-main-cont-rigth');
+
+                // Add class to leftDiv
+                leftDivHead.classList.add('d-none', 'd-lg-block');
+                leftDivCont.classList.add('d-none', 'd-lg-block');
+
+                // Remove class from rightDiv
+                rightDivHead.classList.remove('d-none', 'd-lg-block');
+                rightDivCont.classList.remove('d-none', 'd-lg-block');
+            });
+        });
+    </script>
 
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
