--- a/payroll.html
+++ b/payroll.html
@@ -158,12 +158,9 @@
         </div>
 
         <div class="row">
-            <div class="col-12 col-lg-4 in-main-heads in-main-head-left ">
-                <div class="d-flex justify-content-between align-items-center in-main-head">
+            <div class="col-12 col-lg-4 in-main-heads in-main-head-left d-flex align-items-center ">
+                <div class="in-main-head">
                     <span>All Invoices</span>
-                    <span>
-                        <!-- <button>+ New</button> -->
-                    </span>
                 </div>
             </div>
             <div class="col-12 col-lg-8 in-main-heads in-main-head-right d-none d-lg-block">
@@ -265,7 +262,7 @@
                     <table class="mt-4" width="100%" cellpadding="2" cellspacing="0">
                         <tbody>
                             <tr valign="top" class="d-flex flex-column flex-lg-row">
-                                <td>
+                                <td class="col-lg-6">
                                     <table class="tablestyle_inner">
                                         <tbody>
                                             <tr>
@@ -312,7 +309,7 @@
                                     <input type="hidden" name="grade_id" value="2"><input type="hidden" name="ref"
                                         value="002/2024">
                                 </td>
-                                <td>
+                                <td class="col-lg-6">
                                     <table class="tablestyle_inner ms-lg-3">
                                         <tbody>
                                             <tr>
