--- a/tickets.html
+++ b/tickets.html
@@ -136,7 +136,7 @@
 
         <header>
             <div>
-                <h1 class="welcome-text">Pay<span>roll</span></h1>
+                <h1 class="welcome-text">Tick<span>et</span></h1>
             </div>
             <div class="header-btns">
                 <button class="lang-dropdown">
@@ -146,15 +146,18 @@
                         <p id="directionRlt">Arabic</p>
                     </div>
                 </button>
-                <button><a href=""><i class='bx bx-notification'></i></a></button>
+                <button id="darkModeToggle"><a href=""><iconify-icon
+                            icon="bitcoin-icons:moon-filled"></iconify-icon></a></button>
                 <button><a href="profile.html"><i class='bx bx-user-circle'></i></a></button>
             </div>
         </header>
 
+        <div class="my-4 ">
+            <h4 style="font-weight: 500;"></h4>
+        </div>
 
     </section>
 
-    <!-- Scripts -->
 
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
