--- a/loans.html
+++ b/loans.html
@@ -179,61 +179,121 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-3 mt-lg-5">
-            <div class="col-12 col-lg-6">
-                <h4>Apply for Loan</h4>
-                <form action="" class="reimbursement-form m-lg-3">
-                    <label for="loan-type">
-                        <h6>Loan Type</h6>
-                    </label> <br>
-                    <input type="text" id="loan-type" name="loan-type" placeholder="Enter Loan Type"> <br>
-                    <label for="reimbursement-amount">
-                        <h6>Amount</h6>
-                    </label> <br>
-                    <input type="text" id="loan-amount" name="loan-amount" placeholder="Enter Amount">
-                    <br>
-                    <button type="submit" class="btn mt-3">Apply</button>
-                    <button class="btn mt-3">Cancel</button>
-                </form>
+
+        <div class="row mt-4 mt-lg-5">
+            <div class="col-12 col-lg-4 in-main-heads in-main-head-left d-flex align-items-center ">
+                <div class="in-main-head">
+                    <span>All Invoices</span>
+                </div>
             </div>
-            <div class="col-12 col-lg-6 mt-3 mt-lg-0">
-                <h4>Recents</h4>
-                <div class="leave-history mt-3" style="overflow-x:auto;">
-                    <table>
-                        <tr>
-                            <th>S.No</th>
-                            <th>Payment Date</th>
-                            <th>Amount</th>
-                            <th>Status</th>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>8 May 2024</td>
-                            <td>$200</td>
-                            <td>Pending</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>8 May 2024</td>
-                            <td>$200</td>
-                            <td>Approved</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>8 May 2024</td>
-                            <td>$200</td>
-                            <td>Approved</td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>8 May 2024</td>
-                            <td>$200</td>
-                            <td>Approved</td>
-                        </tr>
-                    </table>
+            <div class="col-12 col-lg-8 in-main-heads in-main-head-right d-none d-lg-block">
+                <div class="in-main-head">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="d-flex justify-content-center align-items-center ">
+                            <span class="payroll-back-btn d-lg-none">
+                                <a href="payroll.html"><iconify-icon icon="weui:back-filled"></iconify-icon></a>
+                            </span>
+                            <span>INV-000181</span>
+                        </div>
+                        <span>
+                            <button>🖨️</button>
+                            <button>Approve</button>
+                            <button>More</button>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-12 col-lg-4 in-main-cont in-main-cont-left">
+                <div class="px-3">
+                    <div class="payroll-search px-3 d-flex align-items-center">
+                        <input type="text" placeholder="Search">
+                        <span><iconify-icon icon="icon-park-outline:search"></iconify-icon></span>
+                    </div>
+                </div>
+                <div class="each-in-member">
+                    <div class="name-inv">
+                        <div class="in-name-amt">
+                            <span class="in-name">William Shakespeare</span>
+                            <span class="in-amount">$84.00</span>
+                        </div>
+                        <div class="in-num-date">
+                            <div>
+                                <span class="in-num">INV000181</span>
+                                <span class="in-date">08/05/2024</span>
+                            </div>
+                            <div class="in-sent">Sent</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="each-in-member">
+                    <div class="name-inv">
+                        <div class="in-name-amt">
+                            <span class="in-name">William Shakespeare</span>
+                            <span class="in-amount">$84.00</span>
+                        </div>
+                        <div class="in-num-date">
+                            <div>
+                                <span class="in-num">INV000181</span>
+                                <span class="in-date">08/05/2024</span>
+                            </div>
+                            <div class="in-sent">Sent</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="each-in-member">
+                    <div class="name-inv">
+                        <div class="in-name-amt">
+                            <span class="in-name">William Shakespeare</span>
+                            <span class="in-amount">$84.00</span>
+                        </div>
+                        <div class="in-num-date">
+                            <div>
+                                <span class="in-num">INV000181</span>
+                                <span class="in-date">08/05/2024</span>
+                            </div>
+                            <div class="in-sent">Sent</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="each-in-member">
+                    <div class="name-inv">
+                        <div class="in-name-amt">
+                            <span class="in-name">William Shakespeare</span>
+                            <span class="in-amount">$84.00</span>
+                        </div>
+                        <div class="in-num-date">
+                            <div>
+                                <span class="in-num">INV000181</span>
+                                <span class="in-date">08/05/2024</span>
+                            </div>
+                            <div class="in-sent">Sent</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-8 in-main-cont in-main-cont-rigth px-4 d-none d-lg-block">
+                <div class="col-12 mt-3">
+                    <h4>Apply for Loan</h4>
+                    <form action="" class="reimbursement-form m-lg-3">
+                        <label for="loan-type">
+                            <h6>Loan Type</h6>
+                        </label> <br>
+                        <input type="text" id="loan-type" name="loan-type" placeholder="Enter Loan Type"> <br>
+                        <label for="reimbursement-amount">
+                            <h6>Amount</h6>
+                        </label> <br>
+                        <input type="text" id="loan-amount" name="loan-amount" placeholder="Enter Amount">
+                        <br>
+                        <button type="submit" class="btn mt-3">Apply</button>
+                        <button class="btn mt-3">Cancel</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <button class="payroll-plus-btn">+</button>
         <div class="empty"></div>
     </section>
     <!-- Scripts -->
