--- a/reimbursement.html
+++ b/reimbursement.html
@@ -141,7 +141,7 @@
                 <h1 class="welcome-text">Reimburse<span>ment</span></h1>
             </div>
             <div class="header-btns">
-                <button class="lang-dropdown" id="directionToggle">
+                <button class="lang-dropdown">
                     <span id="lang">Lang ▼</span>
                     <div class="lang-dropdown-content">
                         <p id="directionLtr">English</p>
@@ -154,70 +154,154 @@
             </div>
         </header>
 
-        <div class="row mt-3">
-            <div class="col-12 col-lg-6">
-                <h4>Submit Claim</h4>
-                <form action="" class="reimbursement-form m-lg-3">
-                    <label for="reimbursement-claim-type">
-                        <h6>Claim Type</h6>
-                    </label> <br>
-                    <input type="text" id="reimbursement-claim-type" name="reimbursement-claim-type"
-                        placeholder="Enter Claim Type"> <br>
-                    <label for="reimbursement-amount">
-                        <h6>Amount</h6>
-                    </label> <br>
-                    <input type="text" id="reimbursement-amount" name="reimbursement-amount" placeholder="Enter Amount">
-                    <br>
-                    <label for="reimbursement-file">
-                        <h6>Receipt Upload</h6>
-                    </label> <br>
-                    <input type="file" id="reimbursement-file" name="reimbursement-file" placeholder="Enter Amount"><br>
-                    <button type="submit" class="btn">Submit Claim</button>
-                    <button class="btn">Cancel</button>
-                </form>
+        <div class="my-4 ">
+            <h4 style="font-weight: 500;"></h4>
+        </div>
+
+        <div class="row">
+            <div class="col-12 col-lg-4 in-main-heads in-main-head-left d-flex align-items-center ">
+                <div class="in-main-head">
+                    <span>All Invoices</span>
+                </div>
             </div>
-            <div class="col-12 col-lg-6 mt-3 mt-lg-0">
-                <h4>Recents</h4>
-                <div class="leave-history mt-3" style="overflow-x:auto;">
-                    <table>
-                        <tr>
-                            <th>S.No</th>
-                            <th>Payment Date</th>
-                            <th>Amount</th>
-                            <th>Status</th>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>8 May 2024</td>
-                            <td>$200</td>
-                            <td>Pending</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>8 May 2024</td>
-                            <td>$200</td>
-                            <td>Approved</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>8 May 2024</td>
-                            <td>$200</td>
-                            <td>Approved</td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>8 May 2024</td>
-                            <td>$200</td>
-                            <td>Approved</td>
-                        </tr>
-                    </table>
+            <div class="col-12 col-lg-8 in-main-heads in-main-head-right d-none d-lg-block">
+                <div class="in-main-head">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="d-flex justify-content-center align-items-center ">
+                            <span class="payroll-back-btn d-lg-none">
+                                <a href="payroll.html"><iconify-icon icon="weui:back-filled"></iconify-icon></a>
+                            </span>
+                            <span>INV-000181</span>
+                        </div>
+                        <span>
+                            <button>🖨️</button>
+                            <button>Approve</button>
+                            <button>More</button>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="empty"></div>
+        <div class="row">
+            <div class="col-12 col-lg-4 in-main-cont in-main-cont-left">
+                <div class="px-3">
+                    <div class="payroll-search px-3 d-flex align-items-center">
+                        <input type="text" placeholder="Search">
+                        <span><iconify-icon icon="icon-park-outline:search"></iconify-icon></span>
+                    </div>
+                </div>
+                <div class="each-in-member">
+                    <div class="name-inv">
+                        <div class="in-name-amt">
+                            <span class="in-name">William Shakespeare</span>
+                            <span class="in-amount">$84.00</span>
+                        </div>
+                        <div class="in-num-date">
+                            <div>
+                                <span class="in-num">INV000181</span>
+                                <span class="in-date">08/05/2024</span>
+                            </div>
+                            <div class="in-sent">Sent</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="each-in-member">
+                    <div class="name-inv">
+                        <div class="in-name-amt">
+                            <span class="in-name">William Shakespeare</span>
+                            <span class="in-amount">$84.00</span>
+                        </div>
+                        <div class="in-num-date">
+                            <div>
+                                <span class="in-num">INV000181</span>
+                                <span class="in-date">08/05/2024</span>
+                            </div>
+                            <div class="in-sent">Sent</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="each-in-member">
+                    <div class="name-inv">
+                        <div class="in-name-amt">
+                            <span class="in-name">William Shakespeare</span>
+                            <span class="in-amount">$84.00</span>
+                        </div>
+                        <div class="in-num-date">
+                            <div>
+                                <span class="in-num">INV000181</span>
+                                <span class="in-date">08/05/2024</span>
+                            </div>
+                            <div class="in-sent">Sent</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="each-in-member">
+                    <div class="name-inv">
+                        <div class="in-name-amt">
+                            <span class="in-name">William Shakespeare</span>
+                            <span class="in-amount">$84.00</span>
+                        </div>
+                        <div class="in-num-date">
+                            <div>
+                                <span class="in-num">INV000181</span>
+                                <span class="in-date">08/05/2024</span>
+                            </div>
+                            <div class="in-sent">Sent</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-8 in-main-cont in-main-cont-rigth px-4 d-none d-lg-block">
+                <div class="col-12 mt-3">
+                    <h4>Submit Claim</h4>
+                    <form action="" class="reimbursement-form m-lg-3">
+                        <label for="reimbursement-claim-type">
+                            <h6>Claim Type</h6>
+                        </label> <br>
+                        <input type="text" id="reimbursement-claim-type" name="reimbursement-claim-type"
+                            placeholder="Enter Claim Type"> <br>
+                        <label for="reimbursement-amount">
+                            <h6>Amount</h6>
+                        </label> <br>
+                        <input type="text" id="reimbursement-amount" name="reimbursement-amount"
+                            placeholder="Enter Amount">
+                        <br>
+                        <label for="reimbursement-file">
+                            <h6>Receipt Upload</h6>
+                        </label> <br>
+                        <input type="file" id="reimbursement-file" name="reimbursement-file"
+                            placeholder="Enter Amount"><br>
+                        <button type="submit" class="btn">Submit Claim</button>
+                        <button class="btn">Cancel</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <button class="payroll-plus-btn">+</button>
+
     </section>
 
     <!-- Scripts -->
+
+    <script>
+        document.querySelectorAll('.each-in-member').forEach(function (element) {
+            element.addEventListener('click', function () {
+                var leftDivHead = document.querySelector('.in-main-head-left');
+                var rightDivHead = document.querySelector('.in-main-head-right');
+                var leftDivCont = document.querySelector('.in-main-cont-left');
+                var rightDivCont = document.querySelector('.in-main-cont-rigth');
+
+                // Add class to leftDiv
+                leftDivHead.classList.add('d-none', 'd-lg-block');
+                leftDivCont.classList.add('d-none', 'd-lg-block');
+
+                // Remove class from rightDiv
+                rightDivHead.classList.remove('d-none', 'd-lg-block');
+                rightDivCont.classList.remove('d-none', 'd-lg-block');
+            });
+        });
+    </script>
 
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
