--- a/loans.html
+++ b/loans.html
@@ -276,7 +276,7 @@
             <div class="col-12 col-lg-8 in-main-cont in-main-cont-rigth px-4 d-none d-lg-block">
                 <div class="col-12 mt-3">
                     <h4>Apply for Loan</h4>
-                    <form action="" class="reimbursement-form m-lg-3">
+                    <form action="" class="reimbursement-form loan-form m-lg-3">
                         <label for="loan-type">
                             <h6>Loan Type</h6>
                         </label> <br>
