--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
@@ -201,58 +202,124 @@
                 </div>
             </div>
         </div>
+
         <h4 style="font-weight: 500;" class="my-4">Recent Updates</h4>
         <div id="apexchart"></div>
+
         <div class="row mt-5 dashboard-recents">
-            <div class="col-md-6">
-                <h5 class="table-title mb-4">Recent Leaves</h5>
-                <table class="table-dashboard">
-                    <thead>
-                        <tr>
-                            <th>Leave Type</th>
-                            <th>Date</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Annual Leave</td>
-                            <td>19 Feb 2020</td>
-                        </tr>
-                        <tr>
-                            <td>Sick Leave</td>
-                            <td>19 Feb 2020</td>
-                        </tr>
-                        <tr>
-                            <td>Annual Leave</td>
-                            <td>19 Feb 2020</td>
-                        </tr>
-                    </tbody>
-                </table>
+
+            <div class="col-lg-6 mt-5 mt-lg-0">
+                <div class="chart-container">
+                    <h5 class="table-title mb-4">Donut chart</h5>
+                    <canvas id="myDonutChart" class="m-auto"></canvas>
+                </div>
             </div>
-            <div class="col-md-6 mt-5 mt-md-0">
-                <h5 class="table-title mb-4">Recent Reimbursement</h5>
-                <table class="table-dashboard">
-                    <thead>
-                        <tr>
-                            <th>Amount</th>
-                            <th>Date</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>$200</td>
-                            <td>19 Feb 2020</td>
-                        </tr>
-                        <tr>
-                            <td>$100</td>
-                            <td>19 Feb 2020</td>
-                        </tr>
-                        <tr>
-                            <td>$200</td>
-                            <td>19 Feb 2020</td>
-                        </tr>
-                    </tbody>
-                </table>
+
+            <div class="col-lg-6">
+                <div class="dashborad-table-col mt-5 mt-lg-0">
+                    <h5 class="table-title mb-4">Recent Leaves</h5>
+                    <table class="table-dashboard">
+                        <thead>
+                            <tr>
+                                <th>Date</th>
+                                <th>Days</th>
+                                <th>Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>19 Feb 2020</td>
+                                <td>1</td>
+                                <td><button class="overdue-btn">Overdue</button></td>
+                            </tr>
+                            <tr>
+                                <td>19 Feb 2020</td>
+                                <td>2</td>
+                                <td><button class="approved-btn">Approved</button></td>
+                            </tr>
+                            <tr>
+                                <td>19 Feb 2020</td>
+                                <td>2</td>
+                                <td><button class="approved-btn">Approved</button></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <div class="col-lg-6 mt-4">
+                <div class="dashborad-table-col">
+                    <h5 class="table-title mb-4">Recent Reimbursement</h5>
+                    <table class="table-dashboard recent-Reimbursement-table">
+                        <thead>
+                            <tr>
+                                <th>Reference</th>
+                                <th>Date</th>
+                                <th>Status</th>
+                                <th>Amount</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>001/2024</td>
+                                <td>19 Feb 2020</td>
+                                <td><button class="overdue-btn">Overdue</button></td>
+                                <td>$200</td>
+
+                            </tr>
+                            <tr>
+                                <td>001/2024</td>
+                                <td>19 Feb 2020</td>
+                                <td><button class="approved-btn">Approved</button></td>
+
+                                <td>$200</td>
+                            </tr>
+                            <tr>
+                                <td>001/2024</td>
+                                <td>19 Feb 2020</td>
+                                <td><button class="approved-btn">Approved</button></td>
+                                <td>$200</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="col-lg-6 mt-4">
+                <div class="dashborad-table-col">
+                    <h5 class="table-title mb-4">Recent Payslips</h5>
+                    <table class="table-dashboard recent-Reimbursement-table">
+                        <thead>
+                            <tr>
+                                <th>Reference</th>
+                                <th>Date</th>
+                                <th>Status</th>
+                                <th>Amount</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>001/2024</td>
+                                <td>19 Feb 2020</td>
+                                <td><button class="overdue-btn">Overdue</button></td>
+                                <td>$200</td>
+
+                            </tr>
+                            <tr>
+                                <td>001/2024</td>
+                                <td>19 Feb 2020</td>
+                                <td><button class="approved-btn">Approved</button></td>
+
+                                <td>$200</td>
+                            </tr>
+                            <tr>
+                                <td>001/2024</td>
+                                <td>19 Feb 2020</td>
+                                <td><button class="approved-btn">Approved</button></td>
+                                <td>$200</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
 
@@ -321,6 +388,65 @@
 
         var chart = new ApexCharts(document.querySelector("#apexchart"), options);
         chart.render();
+    </script>
+
+
+    <script>
+        var ctx = document.getElementById('myDonutChart').getContext('2d');
+        var myDonutChart = new Chart(ctx, {
+            type: 'doughnut',
+            data: {
+                labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple'],
+                datasets: [{
+                    label: 'Sales Distribution',
+                    data: [300, 50, 100, 75, 25],
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.8)',
+                        'rgba(54, 162, 235, 0.8)',
+                        'rgba(255, 206, 86, 0.8)',
+                        'rgba(75, 192, 192, 0.8)',
+                        'rgba(153, 102, 255, 0.8)'
+                    ],
+                    borderColor: [
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(255, 206, 86, 1)',
+                        'rgba(75, 192, 192, 1)',
+                        'rgba(153, 102, 255, 1)'
+                    ],
+                    borderWidth: 2,
+                    hoverOffset: 10
+                }]
+            },
+            options: {
+                responsive: true,
+                plugins: {
+                    legend: {
+                        display: false,  // Disable the default legend
+                    },
+                    title: {
+                        display: false
+                    },
+                    tooltip: {
+                        backgroundColor: 'rgba(0, 0, 0, 0.7)',
+                        titleFont: {
+                            size: 16,
+                            family: 'Arial, sans-serif'
+                        },
+                        bodyFont: {
+                            size: 14,
+                            family: 'Arial, sans-serif'
+                        },
+                        padding: 10,
+                        cornerRadius: 8
+                    }
+                },
+                cutout: '70%',
+            }
+        });
+
+        // Generate custom legend on the right side
+        document.getElementById('chartLegend').innerHTML = myDonutChart.generateLegend();
     </script>
 
     <script src="script.js"></script>
