--- a/payroll.html
+++ b/payroll.html
@@ -184,9 +184,11 @@
         <div class="row">
             <div class="col-12 col-lg-4 in-main-cont in-main-cont-left">
                 <div class="px-3">
-                    <div class="payroll-search px-3 d-flex align-items-center">
+                    <div class="payroll-search px-3 d-flex justify-content-between align-items-center">
                         <input type="text" placeholder="Search">
-                        <span><iconify-icon icon="icon-park-outline:search"></iconify-icon></span>
+                        <span>
+                            <iconify-icon icon="icon-park-outline:search"></iconify-icon>
+                        </span>
                     </div>
                 </div>
                 <div class="each-in-member">
