--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
         <div class="row mt-5 dashboard-recents">
 
-            <div class="col-lg-6 mt-5 mt-lg-0">
+            <div class="col-lg-6">
                 <div class="chart-container">
                     <h5 class="table-title mb-4">Donut chart</h5>
                     <canvas id="myDonutChart" class="m-auto"></canvas>
@@ -284,6 +284,7 @@
                     </table>
                 </div>
             </div>
+            
             <div class="col-lg-6 mt-4">
                 <div class="dashborad-table-col">
                     <h5 class="table-title mb-4">Recent Payslips</h5>
