--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-6">
+            <div class="col-lg-6 mt-5 mt-lg-0">
                 <div class="dashborad-table-col mt-5 mt-lg-0">
                     <h5 class="table-title mb-4">Recent Leaves</h5>
                     <table class="table-dashboard">
