--- a/attendance.html
+++ b/attendance.html
@@ -44,11 +44,11 @@
                 <span class="tooltip">Leaves </span>
             </li>
             <li>
-                <a href="attendance.html">
-                    <i class='bx bxs-star-half' style="color:#0ac30a;"></i>
-                    <span class="links_name" style="color:#0ac30a;">Attendance</span>
+                <a href="reimbursement.html">
+                    <i class='bx bx-wallet'></i>
+                    <span class="links_name">Reimbursement</span>
                 </a>
-                <span class="tooltip">Attendance</span>
+                <span class="tooltip">Reimbursement</span>
             </li>
             <li>
                 <a href="payroll.html">
@@ -58,11 +58,11 @@
                 <span class="tooltip">Payroll</span>
             </li>
             <li>
-                <a href="reimbursement.html">
-                    <i class='bx bx-wallet'></i>
-                    <span class="links_name">Reimbursement</span>
+                <a href="attendance.html">
+                    <i class='bx bxs-star-half' style="color:#0ac30a;"></i>
+                    <span class="links_name" style="color:#0ac30a;">Attendance</span>
                 </a>
-                <span class="tooltip">Reimbursement</span>
+                <span class="tooltip">Attendance</span>
             </li>
             <li>
                 <a href="loans.html">
@@ -146,7 +146,8 @@
                         <p id="directionRlt">Arabic</p>
                     </div>
                 </button>
-                <button id="darkModeToggle"><a href=""><iconify-icon icon="bitcoin-icons:moon-filled"></iconify-icon></a></button>
+                <button id="darkModeToggle"><a href=""><iconify-icon
+                            icon="bitcoin-icons:moon-filled"></iconify-icon></a></button>
                 <button><a href="profile.html"><i class='bx bx-user-circle'></i></a></button>
             </div>
         </header>
