--- a/leaves.html
+++ b/leaves.html
@@ -44,11 +44,11 @@
                 <span class="tooltip">Leaves </span>
             </li>
             <li>
-                <a href="attendance.html">
-                    <i class='bx bxs-star-half'></i>
-                    <span class="links_name">Attendance</span>
+                <a href="reimbursement.html">
+                    <i class='bx bx-wallet'></i>
+                    <span class="links_name">Reimbursement</span>
                 </a>
-                <span class="tooltip">Attendance</span>
+                <span class="tooltip">Reimbursement</span>
             </li>
             <li>
                 <a href="payroll.html">
@@ -58,11 +58,11 @@
                 <span class="tooltip">Payroll</span>
             </li>
             <li>
-                <a href="reimbursement.html">
-                    <i class='bx bx-wallet'></i>
-                    <span class="links_name">Reimbursement</span>
+                <a href="attendance.html">
+                    <i class='bx bxs-star-half'></i>
+                    <span class="links_name">Attendance</span>
                 </a>
-                <span class="tooltip">Reimbursement</span>
+                <span class="tooltip">Attendance</span>
             </li>
             <li>
                 <a href="loans.html">
@@ -279,53 +279,54 @@
             <div class="col-12 col-lg-8 in-main-cont in-main-cont-rigth px-4 d-none d-lg-block">
                 <div class="col-12 leave-form mt-3">
                     <h4>Apply for Leave</h4>
-            <form action="" class="row  px-lg-5 mt-3">
-                <div class="col-6 leave-type">
-                    <h6>Leave Type</h6>
-                    <input type="radio" id="annual_leave" name="leave_type" value="Annual Leave">
-                    <label for="annual_leave">Annual Leave</label> <br class="d-md-none">
-                    <input type="radio" id="sick_leave" name="leave_type" value="Sick Leave">
-                    <label for="sick_leave">Sick Leave</label> <br class="d-md-none">
-                    <input type="radio" id="other_leave" name="leave_type" value="Others">
-                    <label for="other_leave">Others</label>
-                </div>
-                <div class="col-6 leave-type">
-                    <h6>Day Type</h6>
-                    <input type="radio" id="full" name="day_type" value="Full Day">
-                    <label for="full">Full Day</label> <br class="d-md-none">
-                    <input type="radio" id="first_half" name="day_type" value="First Half">
-                    <label for="first_half">First Half</label> <br class="d-md-none">
-                    <input type="radio" id="second_half" name="day_type" value="Second Half">
-                    <label for="second_half">Second Half</label>
-                </div>
-                <div class="col leave-date mt-3">
-                    <label for="leave-from">
-                        <h6>From</h6>
-                    </label> <br>
-                    <input type="date" id="leave-from" name="leave-from">
-                </div>
-                <div class="col leave-date mt-3">
-                    <label for="leave-from">
-                        <h6>To</h6>
-                    </label> <br>
-                    <input type="date" id="leave-from" name="leave-from">
-                </div>
-                <div class="col-12 leave-reason mt-3">
-                    <label for="leave-reason">
-                        <h6>Reason</h6>
-                    </label> <br>
-                    <textarea name="leave-reason" id="leave-reason" placeholder="Type here leave reason"></textarea>
-                </div>
-                <div class="col mt-3">
-                    <button type="Submit" class="btn"> Apply Leave</button>
-                    <button class="btn">Cancel</button>
-                </div>
-            </form>
+                    <form action="" class="row  px-lg-5 mt-3">
+                        <div class="col-6 leave-type">
+                            <h6>Leave Type</h6>
+                            <input type="radio" id="annual_leave" name="leave_type" value="Annual Leave">
+                            <label for="annual_leave">Annual Leave</label> <br class="d-md-none">
+                            <input type="radio" id="sick_leave" name="leave_type" value="Sick Leave">
+                            <label for="sick_leave">Sick Leave</label> <br class="d-md-none">
+                            <input type="radio" id="other_leave" name="leave_type" value="Others">
+                            <label for="other_leave">Others</label>
+                        </div>
+                        <div class="col-6 leave-type">
+                            <h6>Day Type</h6>
+                            <input type="radio" id="full" name="day_type" value="Full Day">
+                            <label for="full">Full Day</label> <br class="d-md-none">
+                            <input type="radio" id="first_half" name="day_type" value="First Half">
+                            <label for="first_half">First Half</label> <br class="d-md-none">
+                            <input type="radio" id="second_half" name="day_type" value="Second Half">
+                            <label for="second_half">Second Half</label>
+                        </div>
+                        <div class="col leave-date mt-3">
+                            <label for="leave-from">
+                                <h6>From</h6>
+                            </label> <br>
+                            <input type="date" id="leave-from" name="leave-from">
+                        </div>
+                        <div class="col leave-date mt-3">
+                            <label for="leave-from">
+                                <h6>To</h6>
+                            </label> <br>
+                            <input type="date" id="leave-from" name="leave-from">
+                        </div>
+                        <div class="col-12 leave-reason mt-3">
+                            <label for="leave-reason">
+                                <h6>Reason</h6>
+                            </label> <br>
+                            <textarea name="leave-reason" id="leave-reason"
+                                placeholder="Type here leave reason"></textarea>
+                        </div>
+                        <div class="col mt-3">
+                            <button type="Submit" class="btn"> Apply Leave</button>
+                            <button class="btn">Cancel</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
 
-        
+
 
         <button class="payroll-plus-btn">+</button>
         <div class="empty"></div>
