--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                 </a>
             </li>
             <li>
-                <a href="attendance.html">
-                    <div><i class='bx bxs-star-half'></i></div>
-                    <div><span class="">Attendance</span></div>
+                <a href="reimbursement.html">
+                    <div><i class='bx bx-wallet'></i></div>
+                    <div><span class="">Reimbursement</span></div>
                 </a>
             </li>
             <li>
@@ -120,7 +120,7 @@
                 <ul class="dropdown-menu dropup">
                     <li><a class="dropdown-item" href="payroll.html"><i class='bx bx-credit-card-alt'></i>Payroll</a>
                     </li>
-                    <li><a class="dropdown-item" href="reimbursement.html"><i class='bx bx-wallet'></i>Reimbursement</a>
+                    <li><a class="dropdown-item" href="attendance.html"><i class='bx bxs-star-half'></i>Attendance</a>
                     </li>
                     <li><a class="dropdown-item" href="loans.html"><i class='bx bx-donate-heart'></i>Loans</a></li>
                     <li><a class="dropdown-item" href="tickets.html"><i><iconify-icon
@@ -255,30 +255,28 @@
                             <tr>
                                 <th>Reference</th>
                                 <th>Date</th>
-                                <th>Status</th>
                                 <th>Amount</th>
+                                <th>Status</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td>001/2024</td>
                                 <td>19 Feb 2020</td>
+                                <td>$200</td>
                                 <td><button class="overdue-btn">Overdue</button></td>
-                                <td>$200</td>
-
                             </tr>
                             <tr>
                                 <td>001/2024</td>
                                 <td>19 Feb 2020</td>
-                                <td><button class="approved-btn">Approved</button></td>
-
                                 <td>$200</td>
+                                <td><button class="approved-btn">Approved</button></td>
                             </tr>
                             <tr>
                                 <td>001/2024</td>
                                 <td>19 Feb 2020</td>
-                                <td><button class="approved-btn">Approved</button></td>
                                 <td>$200</td>
+                                <td><button class="approved-btn">Approved</button></td>
                             </tr>
                         </tbody>
                     </table>
@@ -293,30 +291,28 @@
                             <tr>
                                 <th>Reference</th>
                                 <th>Date</th>
-                                <th>Status</th>
                                 <th>Amount</th>
+                                <th>Status</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td>001/2024</td>
                                 <td>19 Feb 2020</td>
+                                <td>$200</td>
                                 <td><button class="overdue-btn">Overdue</button></td>
-                                <td>$200</td>
-
                             </tr>
                             <tr>
                                 <td>001/2024</td>
                                 <td>19 Feb 2020</td>
-                                <td><button class="approved-btn">Approved</button></td>
-
                                 <td>$200</td>
+                                <td><button class="approved-btn">Approved</button></td>
                             </tr>
                             <tr>
                                 <td>001/2024</td>
                                 <td>19 Feb 2020</td>
-                                <td><button class="approved-btn">Approved</button></td>
                                 <td>$200</td>
+                                <td><button class="approved-btn">Approved</button></td>
                             </tr>
                         </tbody>
                     </table>
