--- a/tickets.html
+++ b/tickets.html
@@ -106,20 +106,21 @@
                 </a>
             </li>
             <li>
-                <a href="attendance.html">
-                    <div><i class='bx bxs-star-half'></i></div>
-                    <div><span class="">Attendance</span></div>
+                <a href="reimbursement.html">
+                    <div><i class='bx bx-wallet'></i></div>
+                    <div><span class="">Reimbursement</span></div>
                 </a>
             </li>
             <li>
-                <button class="d-lg-none dropdown-btn" data-bs-toggle="dropdown" aria-expanded="false">
+                <button class="d-lg-none dropdown-btn" data-bs-toggle="dropdown" aria-expanded="false"
+                    style="color:#0ac30a;">
                     <div><i class='bx bxs-chevron-up'></i></div>
                     <div><span class="">More</span></div>
                 </button>
                 <ul class="dropdown-menu dropup">
                     <li><a class="dropdown-item" href="payroll.html"><i class='bx bx-credit-card-alt'></i>Payroll</a>
                     </li>
-                    <li><a class="dropdown-item" href="reimbursement.html"><i class='bx bx-wallet'></i>Reimbursement</a>
+                    <li><a class="dropdown-item" href="attendance.html"><i class='bx bxs-star-half'></i>Attendance</a>
                     </li>
                     <li><a class="dropdown-item" href="loans.html"><i class='bx bx-donate-heart'></i>Loans</a></li>
                     <li><a class="dropdown-item" href="tickets.html" style="color:#0ac30a;"><i><iconify-icon
