--- a/loans.html
+++ b/loans.html
@@ -106,9 +106,9 @@
                 </a>
             </li>
             <li>
-                <a href="attendance.html">
-                    <div><i class='bx bxs-star-half'></i></div>
-                    <div><span class="">Attendance</span></div>
+                <a href="reimbursement.html">
+                    <div><i class='bx bx-wallet'></i></div>
+                    <div><span class="">Reimbursement</span></div>
                 </a>
             </li>
             <li>
@@ -120,7 +120,7 @@
                 <ul class="dropdown-menu dropup">
                     <li><a class="dropdown-item" href="payroll.html"><i class='bx bx-credit-card-alt'></i>Payroll</a>
                     </li>
-                    <li><a class="dropdown-item" href="reimbursement.html"><i class='bx bx-wallet'></i>Reimbursement</a>
+                    <li><a class="dropdown-item" href="attendance.html"><i class='bx bxs-star-half'></i>Attendance</a>
                     </li>
                     <li><a class="dropdown-item" href="loans.html" style="color:#0ac30a;"><i
                                 class='bx bx-donate-heart'></i>Loans</a></li>
